<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/backgroundColor"
    android:fillViewport="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <!--Must include this Toolbar widget on every
            layout.xml file to display toolbar-->

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:minHeight="100dp"
                    android:theme="?attr/actionBarTheme"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ecu"
                    android:contentDescription="@string/desc">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toolbarName"
                    android:textSize="25sp"
                    android:textColor="@color/backgroundColor"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp">
                </TextView>

                </androidx.appcompat.widget.Toolbar>

                 <!-- End of Toolbar widget-->
                <!-- Page start below.-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingTop="120dp"
                android:baselineAligned="false">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="200dp"
                    android:layout_height="85dp"
                    android:background="@drawable/buttons"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Button 1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="200dp"
                    android:layout_height="85dp"
                    android:background="@drawable/buttons"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Button 2"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingTop="220dp"
                android:baselineAligned="false">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="200dp"
                    android:layout_height="85dp"
                    android:background="@drawable/buttons"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Button 3"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="200dp"
                    android:layout_height="85dp"
                    android:background="@drawable/buttons"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Button 4"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingTop="320dp"
                android:baselineAligned="false">


                <Button
                    android:id="@+id/button5"
                    android:layout_width="200dp"
                    android:layout_height="85dp"
                    android:background="@drawable/buttons"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Employee Directory"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="200dp"
                    android:layout_height="85dp"
                    android:background="@drawable/buttons"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Button 6"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:orientation="horizontal"
                android:weightSum="2"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingTop="420dp"
                android:baselineAligned="false">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="200dp"
                    android:layout_height="85dp"
                    android:background="@drawable/buttons"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Button 7"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="200dp"
                    android:layout_height="85dp"
                    android:background="@drawable/buttons"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Button 8"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="520dp"
                android:background="@color/colorAccent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="600dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:weightSum="4"
                            android:orientation="horizontal"
                            android:layout_marginStart="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp">

                            <ImageButton
                                android:id="@+id/buttonFacebook"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:background="@null"
                                android:src="@drawable/facebook"
                                android:layout_weight="1"
                                android:contentDescription="@string/desc"
                                android:paddingStart="10dp"
                                android:paddingLeft="10dp"
                                android:paddingEnd="10dp"
                                android:paddingRight="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                />

                            <ImageButton
                                android:id="@+id/buttonTitter"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:background="@null"
                                android:src="@drawable/twitter"
                                android:layout_weight="1"
                                android:contentDescription="@string/desc"
                                android:paddingStart="10dp"
                                android:paddingLeft="10dp"
                                android:paddingEnd="10dp"
                                android:paddingRight="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                />

                            <ImageButton
                                android:id="@+id/buttonYoutube"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:background="@null"
                                android:src="@drawable/youtube"
                                android:layout_weight="1"
                                android:contentDescription="@string/desc"
                                />

                            <ImageButton
                                android:id="@+id/buttonInstagram"
                                android:layout_width="56dp"
                                android:layout_height="56dp"
                                android:background="@null"
                                android:src="@drawable/instagram"
                                android:layout_weight="1"
                                android:contentDescription="@string/desc"
                                android:paddingStart="10dp"
                                android:paddingLeft="10dp"
                                android:paddingEnd="10dp"
                                android:paddingRight="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/apply"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="80dp"
                            android:text="@string/apply"
                            android:textColor="@color/backgroundColor"
                            android:textSize="25sp">
                        </TextView>

                        <Button
                            android:id="@+id/buttonApply"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:background="@drawable/button_apply"
                            android:text="@string/buttonApply"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="125dp"
                            android:textColor="@color/backgroundColor"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/toolbarName"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="200dp"
                            android:textSize="30sp"
                            android:textColor="@color/backgroundColor">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ECUinfo"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="240dp"
                            android:textSize="20sp"
                            android:textColor="@color/backgroundColor">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ECUnumber"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="270dp"
                            android:textSize="20sp"
                            android:textColor="@color/backgroundColor">
                        </TextView>

                        <ImageView
                            android:layout_width="196dp"
                            android:layout_height="141dp"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="320dp"
                            android:src="@drawable/ecu"
                            android:contentDescription="@string/desc">
                        </ImageView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ECUcopyright"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="480dp"
                            android:textSize="20sp">
                        </TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ECUstatement"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="510dp"
                            android:textSize="10sp">
                        </TextView>

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>